# ozy

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  CONTRIBUTING.md  Makefile  README.md  SPEC.md  go.mod  go.sum  skills-lock.json
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
.omo/run-continuation/: ses_13d65f263ffezATxIo59I4QHnI.json  ses_142c43b83ffeInQEYoxSAKty2Z.json
.serena/: project.yml
.specify/memory/: constitution.md
bench/: .env.example  Dockerfile  README.md  contextspy-config.toml  docker-compose.yml
bench/configs/: opencode.direct.jsonc  opencode.ozy.jsonc  ozy.downstream.jsonc
cmd/ozy/: main.go
cmd/ozy-bench/: main.go
cmd/ozy-install/: main.go
evals/: BENCHMARKS.md  METHODOLOGY.md  README.md  embed.go
evals/data/: thresholds.json
evals/snapshots/: baseline.json
examples/: ozy.jsonc  test_mcp_examples.jsonc
graphify-out/: .graphify_chunk_list_01.txt  .graphify_chunk_list_02.txt  .graphify_chunk_list_03.txt  .graphify_chunk_list_04.txt  .graphify_chunk_list_05.txt  .graphify_chunk_list_06.txt  .graphify_chunk_list_07.txt  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-15/: GRAPH_REPORT.md  graph.json  (+1 more)
sidecar/: README.md  pyproject.toml  requirements-faiss.txt  requirements.txt
sidecar/sidecar/: __init__.py  __main__.py  embedder.py  ops.py  protocol.py  store.py  vector.py
sidecar/tests/: conftest.py  test_embedder.py  test_ops.py  test_persistence.py  test_protocol.py  test_store.py  test_vector.py
(+288 files in other folders)
